Adicionar a estilização do site

--- a/index.html
+++ b/index.html
@@ -11,25 +11,30 @@
 
 <body>
     <header>
-        <nav>
-            <a href="#">Home</a>
-            <a href="#">Sobre</a>
-            <a href="#">Nossos projetos</a>
-            <a href="#">Contato</a>
+        <nav class="nav-header cor-vermelha">
+            <a href="#" class="cor-vermelha">Home</a>
+            <a href="#" class="cor-vermelha">Sobre</a>
+            <a href="#" class="cor-vermelha">Nossos projetos</a>
+            <a href="#" class="cor-vermelha">Contato</a>
 
 
         </nav>
 
-        <input type="text" placeholder="Digite sua pesquisa">
+    
+        <input type="text" placeholder="Digite sua pesquisa" id="header-pesquisa">
     </header>
-    <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi dolorem exercitationem nulla velit cum
+    
+    <a href="" class= "cor-vermelha"></a>Essa é uma âncora</a>
+
+    <p class="negrito"> 
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi dolorem exercitationem nulla velit cum
         sapiente, sed explicabo nemo, iste ullam, ex officiis veritatis? Laborum animi harum iste, minus repellendus
         officiis!
 
 
     </p>
 
-    <section>
+    <section> 
 
         <p>Entre em contato conosco para pedir cotações de trabalhos.</p>
 
